--- a/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
@@ -1,5 +1,5 @@
 ---
-- name: Store Switch | Fetching name server configuration
+- name: Store Switch | Fetch name server configuration
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -9,7 +9,7 @@
   register: name_server
   changed_when: false
 
-- name: Store Switch | Fetching domain lookup configuration
+- name: Store Switch | Fetch domain lookup configuration
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -19,7 +19,7 @@
   register: domain_lookup
   changed_when: false
 
-- name: Store Switch | Enabling DNS lookups
+- name: Store Switch | Enable DNS lookups
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -32,7 +32,7 @@
       {{ store_switch }}
   when: name_server.stdout_lines[5] == "" or domain_lookup.stdout_lines[5] == "no ip domain-lookup"
 
-- name: Store Switch | Fetching switch uptime
+- name: Store Switch | Fetch switch uptime
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -42,7 +42,7 @@
   register: store_switch_uptime
   changed_when: false
 
-- name: Store Switch | Tracing route to the internet
+- name: Store Switch | Trace route to the internet
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -52,7 +52,7 @@
   register: store_internet_egress
   changed_when: false
 
-- name: Store Switch | Testing DNS resolution
+- name: Store Switch | Test DNS resolution
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -62,11 +62,11 @@
   register: store_switch_dns_test
   changed_when: false
 
-- name: Store Switch | Setting verifone_ip fact
+- name: Store Switch | Set verifone_ip fact
   ansible.builtin.set_fact:
     verifone_ip: "{{ store_switch_dns_test.stdout_lines[8] | regex_search('\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}', multiline=True, ignorecase=False) }}"
 
-- name: Store Switch | Connecting to Williams Sonoma site
+- name: Store Switch | Connect to Williams Sonoma site
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -76,7 +76,7 @@
   register: store_switch_connect_ws_site
   changed_when: false
 
-- name: Store Switch | Connecting to Store Wide Web site
+- name: Store Switch | Connect to Store Wide Web site
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
@@ -86,7 +86,7 @@
   register: store_switch_connect_storesweb
   changed_when: false
 
-- name: Store Switch | Connecting to Verifone API
+- name: Store Switch | Connect to Verifone API
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
       --insecure
