Enable task ignore_errors option

--- a/playbooks/tasks/snow_attach_store_diagnostic_report/rocklin_mpls_router.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/rocklin_mpls_router.yml
@@ -8,6 +8,7 @@
       {{ rocklin_mpls_router }}
   register: store_subnet_lookup
   changed_when: false
+  ignore_errors: true
 
 - name: Rocklin MPLS Router | Fetch store broadband VPN tunnel status
   ansible.builtin.command: >
@@ -19,6 +20,7 @@
   register: store_bb_tunnel_status
   changed_when: false
   when: not sdwan_store
+  ignore_errors: true
 
 - name: Rocklin MPLS Router | Fetch store broadband VPN tunnel down count
   ansible.builtin.command: >
@@ -30,6 +32,7 @@
   register: store_vpn_down_count
   changed_when: false
   when: not sdwan_store
+  ignore_errors: true
 
 - name: Rocklin MPLS Router | Ping store router
   ansible.builtin.command: >
@@ -40,6 +43,7 @@
       {{ rocklin_mpls_router }}
   register: store_router_ping
   changed_when: false
+  ignore_errors: true
 
 - name: Rocklin MPLS Router | Ping store switch
   ansible.builtin.command: >
@@ -50,3 +54,4 @@
       {{ rocklin_mpls_router }}
   register: store_switch_ping
   changed_when: false
+  ignore_errors: true
