--- a/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
@@ -8,6 +8,7 @@
       {{ store_switch }}
   register: name_server
   changed_when: false
+  ignore_errors: true
 
 - name: Store Switch | Fetch domain lookup configuration
   ansible.builtin.command: >
@@ -18,6 +19,7 @@
       {{ store_switch }}
   register: domain_lookup
   changed_when: false
+  ignore_errors: true
 
 - name: Store Switch | Enable DNS lookups
   ansible.builtin.command: >
@@ -31,6 +33,7 @@
       --command "copy running-config startup-config"
       {{ store_switch }}
   when: name_server.stdout_lines[5] == "" or domain_lookup.stdout_lines[5] == "no ip domain-lookup"
+  ignore_errors: true
 
 - name: Store Switch | Fetch switch uptime
   ansible.builtin.command: >
@@ -41,6 +44,7 @@
       {{ store_switch }}
   register: store_switch_uptime
   changed_when: false
+  ignore_errors: true
 
 - name: Store Switch | Trace route to the internet
   ansible.builtin.command: >
@@ -51,6 +55,7 @@
       {{ store_switch }}
   register: store_internet_egress
   changed_when: false
+  ignore_errors: true
 
 - name: Store Switch | Test DNS resolution
   ansible.builtin.command: >
@@ -61,10 +66,12 @@
       {{ store_switch }}
   register: store_switch_dns_test
   changed_when: false
+  ignore_errors: true
 
 - name: Store Switch | Set verifone_ip fact
   ansible.builtin.set_fact:
     verifone_ip: "{{ store_switch_dns_test.stdout_lines[8] | regex_search('\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}', multiline=True, ignorecase=False) }}"
+  when: store_switch_dns_test.stdout_lines
 
 - name: Store Switch | Connect to Williams Sonoma site
   ansible.builtin.command: >
@@ -75,6 +82,7 @@
       {{ store_switch }}
   register: store_switch_connect_ws_site
   changed_when: false
+  ignore_errors: true
 
 - name: Store Switch | Connect to Store Wide Web site
   ansible.builtin.command: >
@@ -85,6 +93,7 @@
       {{ store_switch }}
   register: store_switch_connect_storesweb
   changed_when: false
+  ignore_errors: true
 
 - name: Store Switch | Connect to Verifone API
   ansible.builtin.command: >
@@ -95,3 +104,4 @@
       {{ store_switch }}
   register: store_switch_connect_verifone
   changed_when: false
+  ignore_errors: true
