--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -52,35 +52,60 @@
       ansible.builtin.set_fact:
         work_notes: |
           Store Switch:<br />
+          {% if store_switch_ping.stdout %}
           {% if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
             Pingable: Yes<br />
           {% else %}
             Pingable: <span style="color: red">No</span><br />
           {% endif %}
+          {% else %}
+            Pingable: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if store_switch_uptime.stdout_lines %}
             Uptime: {{ store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") }}<br />
+          {% else %}
+            Uptime: <span style="color: red">N/A</span><br />
+          {% endif %}
           Store Router:<br />
+          {% if store_router_ping.stdout %}
           {% if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
             Pingable: Yes<br />
           {% else %}
             Pingable: <span style="color: red">No</span><br />
           {% endif %}
+          {% else %}
+            Pingable: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if store_subnet_lookup.stdout_lines %}
           {% if store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=False, ignorecase=False) %}
           MPLS Path: Up<br />
           {% else %}
           MPLS Path: <span style="color: red">Down</span><br />
           {% endif %}
+          {% else %}
+          MPLS Path: <span style="color: red">N/A</span><br />
+          {% endif %}
           {% if not sdwan_store %}
+          {% if store_bb_tunnel_status.stdout %}
           {% if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) %}
           Broadband Tunnel: Up<br />
           {% else %}
           Broadband Tunnel: <span style="color: red">Down</span><br />
           {% endif %}
+          {% else %}
+          Broadband Tunnel: <span style="color: red">N/A</span><br />
           {% endif %}
+          {% endif %}
+          {% if store_internet_egress.stdout %}
           {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or not store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Internet Reachable: Yes<br />
           {% else %}
           Internet Reachable: <span style="color: red">No</span><br />
           {% endif %}
+          {% else %}
+          Internet Reachable: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if store_internet_egress.stdout %}
           {% if store_internet_egress.stdout | regex_search("asgi1", multiline=True, ignorecase=False) %}
           Internet Egress: Ashburn<br />
           {% elif store_internet_egress.stdout | regex_search("rkat1", multiline=True, ignorecase=False)  %}
@@ -88,32 +113,63 @@
           {% elif store_internet_egress.stdout | regex_search("sast1", multiline=True, ignorecase=False)  %}
           Internet Egress: Sacramento<br />
           {% else %}
-          Internet Egress: Unknown<br />
+          Internet Egress: <span style="color: red">Unknown</span><br />
           {% endif %}
+          {% else %}
+          Internet Egress: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if store_switch_dns_test.stdout %}
           {% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
           DNS Resolution Functional: Yes<br />
           {% else %}
           DNS Resolution Functional: <span style="color: red">No</span><br />
           {% endif %}
+          {% else %}
+          DNS Resolution Functional: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if store_switch_connect_ws_site.stdout %}
           {% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Williams Sonoma Site (www.williams-sonoma.com) Reachable: Yes<br />
           {% else %}
           Williams Sonoma Site (www.williams-sonoma.com) Reachable: <span style="color: red">No</span><br />
           {% endif %}
+          {% else %}
+          Williams Sonoma Site (www.williams-sonoma.com) Reachable: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if store_switch_connect_storesweb.stdout %}
           {% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: Yes<br />
           {% else %}
           Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: <span style="color: red">No</span><br />
           {% endif %}
+          {% else %}
+          Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if store_switch_connect_verifone.stdout %}
           {% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Verifone API (api.vfipayna.com) Reachable: Yes<br />
           {% else %}
           Verifone API (api.vfipayna.com) Reachable: <span style="color: red">No</span><br />
           {% endif %}
+          {% else %}
+          Verifone API (api.vfipayna.com) Reachable: <span style="color: red">N/A</span><br />
+          {% endif %}
           Verifone active firewall sessions:<br />
+          {% if active_verifone_sessions_ashburn.stdout_lines is defined %}
             Ashburn: {{ active_verifone_sessions_ashburn.stdout_lines | length - 1 }}<br />
+          {% else %}
+            Ashburn: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if active_verifone_sessions_rocklin.stdout_lines is defined %}
             Rocklin: {{ active_verifone_sessions_rocklin.stdout_lines | length - 1 }}<br />
+          {% else %}
+            Rocklin: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if active_verifone_sessions_sacramento.stdout_lines is defined %}
             Sacramento: {{ active_verifone_sessions_sacramento.stdout_lines | length - 1 }}<br />
+          {% else %}
+            Sacramento: <span style="color: red">N/A</span><br />
+          {% endif %}
 
     - name: Update incident work notes
       servicenow.itsm.incident:
