--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   gather_facts: false
   roles:
-    - output
+    - Output
 
   tasks:
     - name: Create panos-cli configuration file
@@ -31,6 +31,7 @@
         - tasks/snow_attach_store_diagnostic_report/store_switch.yml
         - tasks/snow_attach_store_diagnostic_report/rocklin_mpls_router.yml
         - tasks/snow_attach_store_diagnostic_report/firewall.yml
+        - tasks/snow_attach_store_diagnostic_report/vmanage.yml
 
   post_tasks:
     - name: Render diagnostic report
@@ -52,7 +53,7 @@
       ansible.builtin.set_fact:
         work_notes: |
           Store Switch:<br />
-          {% if store_switch_ping.stdout %}
+          {% if store_switch_ping.stdout is defined %}
           {% if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
             Pingable: Yes<br />
           {% else %}
@@ -61,13 +62,13 @@
           {% else %}
             Pingable: <span style="color: red">N/A</span><br />
           {% endif %}
-          {% if store_switch_uptime.stdout_lines %}
+          {% if store_switch_uptime.stdout_lines is defined %}
             Uptime: {{ store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") }}<br />
           {% else %}
             Uptime: <span style="color: red">N/A</span><br />
           {% endif %}
           Store Router:<br />
-          {% if store_router_ping.stdout %}
+          {% if store_router_ping.stdout is defined %}
           {% if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
             Pingable: Yes<br />
           {% else %}
@@ -76,7 +77,7 @@
           {% else %}
             Pingable: <span style="color: red">N/A</span><br />
           {% endif %}
-          {% if store_subnet_lookup.stdout_lines %}
+          {% if store_subnet_lookup.stdout_lines is defined %}
           {% if store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=False, ignorecase=False) %}
           MPLS Path: Up<br />
           {% else %}
@@ -86,7 +87,7 @@
           MPLS Path: <span style="color: red">N/A</span><br />
           {% endif %}
           {% if not sdwan_store %}
-          {% if store_bb_tunnel_status.stdout %}
+          {% if store_bb_tunnel_status.stdout is defined %}
           {% if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) %}
           Broadband Tunnel: Up<br />
           {% else %}
@@ -96,7 +97,34 @@
           Broadband Tunnel: <span style="color: red">N/A</span><br />
           {% endif %}
           {% endif %}
-          {% if store_internet_egress.stdout %}
+          {% if sdwan_store %}
+          SD-WAN Tunnel States:<br />
+          {% if asbc1_hub_1_sessions.json.data is defined %}
+            Ashburn Hub 1:<br />
+          {% for s in asbc1_hub_1_sessions.json.data %}
+              {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}<span style="color: red">{{ s.state | title }}</span><br />{% endif +%}
+          {% endfor %}
+          {% else %}
+            Ashburn Hub 1: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if rkat1_hub_1_sessions.json.data is defined %}
+            Rocklin Hub 1:<br />
+          {% for s in rkat1_hub_1_sessions.json.data %}
+              {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}<span style="color: red">{{ s.state | title }}</span><br />{% endif +%}
+          {% endfor %}
+          {% else %}
+            Rocklin Hub 1: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if rkat1_hub_2_sessions.json.data is defined %}
+            Rocklin Hub 2:<br />
+          {% for s in rkat1_hub_2_sessions.json.data %}
+              {{ s["local-color"] | title }}: {% if s.state == "up" %}Up<br />{% else %}<span style="color: red">{{ s.state | title }}</span><br />{% endif +%}
+          {% endfor %}
+          {% else %}
+            Rocklin Hub 2: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% endif %}
+          {% if store_internet_egress.stdout is defined %}
           {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or not store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Internet Reachable: Yes<br />
           {% else %}
@@ -105,7 +133,7 @@
           {% else %}
           Internet Reachable: <span style="color: red">N/A</span><br />
           {% endif %}
-          {% if store_internet_egress.stdout %}
+          {% if store_internet_egress.stdout is defined %}
           {% if store_internet_egress.stdout | regex_search("asgi1", multiline=True, ignorecase=False) %}
           Internet Egress: Ashburn<br />
           {% elif store_internet_egress.stdout | regex_search("rkat1", multiline=True, ignorecase=False)  %}
@@ -118,7 +146,7 @@
           {% else %}
           Internet Egress: <span style="color: red">N/A</span><br />
           {% endif %}
-          {% if store_switch_dns_test.stdout %}
+          {% if store_switch_dns_test.stdout is defined %}
           {% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
           DNS Resolution Functional: Yes<br />
           {% else %}
@@ -127,7 +155,7 @@
           {% else %}
           DNS Resolution Functional: <span style="color: red">N/A</span><br />
           {% endif %}
-          {% if store_switch_connect_ws_site.stdout %}
+          {% if store_switch_connect_ws_site.stdout is defined %}
           {% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Williams Sonoma Site (williams-sonoma.com) Reachable: Yes<br />
           {% else %}
@@ -136,7 +164,7 @@
           {% else %}
           Williams Sonoma Site (williams-sonoma.com) Reachable: <span style="color: red">N/A</span><br />
           {% endif %}
-          {% if store_switch_connect_storesweb.stdout %}
+          {% if store_switch_connect_storesweb.stdout is defined %}
           {% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Store Wide Web Site ({{ storesweb_fqdn }}) Reachable: Yes<br />
           {% else %}
@@ -145,7 +173,7 @@
           {% else %}
           Store Wide Web Site ({{ storesweb_fqdn }}) Reachable: <span style="color: red">N/A</span><br />
           {% endif %}
-          {% if store_switch_connect_verifone.stdout %}
+          {% if store_switch_connect_verifone.stdout is defined %}
           {% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Verifone API (api.vfipayna.com) Reachable: Yes<br />
           {% else %}
