--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -125,7 +125,7 @@
           {% endif %}
           {% endif %}
           {% if store_internet_egress.stdout is defined %}
-          {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or not store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
+          {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
           Internet Reachable: Yes<br />
           {% else %}
           Internet Reachable: <span style="color: red">No</span><br />
