--- a/playbooks/tasks/snow_attach_store_diagnostic_report/firewall.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/firewall.yml
@@ -4,7 +4,7 @@
   register: active_verifone_sessions_ashburn
   changed_when: false
   failed_when: active_verifone_sessions_ashburn.rc != 0 and active_verifone_sessions_ashburn.rc != 1
-  when: verifone_ip is defined
+  when: verifone_ip | default("")
   ignore_errors: true
 
 - name: Firewall | Fetch Rocklin active Verifone sessions
@@ -12,7 +12,7 @@
   register: active_verifone_sessions_rocklin
   changed_when: false
   failed_when: active_verifone_sessions_rocklin.rc != 0 and active_verifone_sessions_rocklin.rc != 1
-  when: verifone_ip is defined
+  when: verifone_ip | default("")
   ignore_errors: true
 
 - name: Firewall | Fetch Sacramento active Verifone sessions
@@ -20,5 +20,5 @@
   register: active_verifone_sessions_sacramento
   changed_when: false
   failed_when: active_verifone_sessions_sacramento.rc != 0 and active_verifone_sessions_sacramento.rc != 1
-  when: verifone_ip is defined
+  when: verifone_ip | default("")
   ignore_errors: true
