--- a/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
@@ -71,7 +71,7 @@
 - name: Store Switch | Set verifone_ip fact
   ansible.builtin.set_fact:
     verifone_ip: "{{ store_switch_dns_test.stdout_lines[8] | regex_search('\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}', multiline=True, ignorecase=False) }}"
-  when: store_switch_dns_test.stdout_lines
+  when: store_switch_dns_test.stdout_lines[8] | default("")
 
 - name: Store Switch | Connect to Williams Sonoma site
   ansible.builtin.command: >
