--- a/playbooks/tasks/snow_attach_store_diagnostic_report/firewall.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/firewall.yml
@@ -1,4 +1,13 @@
 ---
+- name: Create panos-cli configuration file
+  ansible.builtin.copy:
+    dest: /home/runner/.panos-cli.yml
+    content: |
+      apikey: "{{ panw_api_token }}"
+      user: "{{ panw_user }}"
+      password: "{{ panw_password }}"
+  no_log: true
+
 - name: Firewall | Fetch Ashburn active Verifone sessions
   ansible.builtin.shell: "{{ playbook_dir }}/library/go/panos-cli firewall run commands --insecure --timeout 60 --command 'show session all filter state active destination {{ verifone_ip }} | match {{ pin_pad_subnet_host_range_regex }}' {{ firewalls.asbc1_corp_edge }} | egrep '\\*{3} show|ACTIVE'"
   register: active_verifone_sessions_ashburn
