--- a/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
+++ b/playbooks/tasks/snow_attach_store_diagnostic_report/store_switch.yml
@@ -1,4 +1,13 @@
 ---
+- name: Create ios-cli configuration file
+  ansible.builtin.copy:
+    dest: /home/runner/.ios-cli.yml
+    content: |
+      apikey: "{{ panw_api_token }}"
+      user: "{{ ansible_user }}"
+      password: "{{ ansible_ssh_pass }}"
+  no_log: true
+
 - name: Store Switch | Fetch name server configuration
   ansible.builtin.command: >
     {{ playbook_dir }}/library/go/ios-cli device run commands
