--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -14,6 +14,7 @@
         - tasks/snow_attach_store_diagnostic_report/rocklin_mpls_router.yml
         - tasks/snow_attach_store_diagnostic_report/firewall.yml
         - tasks/snow_attach_store_diagnostic_report/vmanage.yml
+        - tasks/snow_attach_store_diagnostic_report/mist.yml
 
   post_tasks:
     - name: Render diagnostic report
@@ -104,6 +105,52 @@
           {% endfor %}
           {% else %}
             Rocklin Hub 2: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% endif %}
+          {% if mist_store %}
+          Mist Wireless:<br />
+          {% if mist_site_stats.json | default("") %}
+            Site: {{ mist_site_stats.json.name }}<br />
+          {% if mist_site_stats.json.num_ap_connected == mist_site_stats.json.num_ap %}
+            Connected APs: {{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }}<br />
+          {% else %}
+            Connected APs: <span style="color: red">{{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }}</span><br />
+          {% endif %}
+            Connected Clients: {{ mist_site_stats.json.num_clients }}<br />
+          {% else %}
+            Site: <span style="color: red">N/A</span><br />
+            Connected APs: <span style="color: red">N/A</span><br />
+            Connected Clients: <span style="color: red">N/A</span><br />
+          {% endif %}
+          {% if mist_wlans.json | default("") %}
+            SSIDs:<br />
+          {% for wlan in mist_wlans.json %}
+              {{ wlan.ssid }}:<br />
+                Enabled: {% if wlan.enabled %}Yes{% else %}No{% endif %}<br />
+                Connected Clients: {{ mist_client_stats.json | selectattr('ssid', 'match', wlan.ssid) | length }}<br />
+          {% endfor %}
+          {% set rssi =  mist_client_stats.json | map(attribute='rssi') | sort %}
+            RSSI:<br />
+              Best: {{ rssi[-1] }}<br />
+              Worst: {{ rssi[0] }}<br />
+              Median: {{ rssi[rssi | length // 2] }}<br />
+              Top 5 Worst:<br />
+          {% for c in (mist_client_stats.json | sort(attribute="rssi"))[:5] %}
+          {% if c.hostname | default("") and c.hostname | default("") != "\"\"" %}
+                {{ c.ip }} ({{ c.hostname }}):<br />
+          {% else %}
+                {{ c.ip }}:<br />
+          {% endif %}
+                  RSSI: {{ c.rssi }}<br />
+                  SNR: {{ c.snr }}<br />
+                  SSID: {{ c.ssid }}<br />
+                  Channel: {{ c.channel }}<br />
+                  MAC Address: {{ c.mac }}<br />
+                  Username: {{ c.username | default("") }}<br />
+          {% endfor %}
+          {% else %}
+            SSIDs: <span style="color: red">N/A</span><br />
+            RSSI: <span style="color: red">N/A</span><br />
           {% endif %}
           {% endif %}
           {% if not store_internet_egress.stderr | default("failed") %}
